--- a/Compose-LEMP/docker-compose.yml
+++ b/Compose-LEMP/docker-compose.yml
@@ -1,35 +1,43 @@
-front:
-    image: nginx
-    ports:
-        - "8082:80"
-    links:
-        - "engine:engine"
-    volumes:
-        - "./sources:/home/docker:rw"
-        - "./docker/front/default.conf:/etc/nginx/conf.d/default.conf:ro"
-engine:
-    build: ./docker/engine/
-    volumes:
-        - "./sources:/home/docker:rw"
-        - "./docker/engine/php.ini:/usr/local/etc/php/conf.d/custom.ini:ro"
-    links:
-        - "db:db"
-    working_dir: "/home/docker"
-db:
-    image: mariadb:latest
-    ports:
-        - "3306:3306"
-    environment:
-        - "MYSQL_ROOT_PASSWORD=root"
-        - "MYSQL_USER=esgi"
-        - "MYSQL_PASSWORD=esgi"
-        - "MYSQL_DATABASE=esgi"
-phpmyadmin:
-  image: phpmyadmin/phpmyadmin
-  links:
-    - db:db
-  ports:
-    - 8088:80
-  environment:
-    MYSQL_USERNAME: root
-    MYSQL_ROOT_PASSWORD: root
+version: "3.1"
+services:
+    mariadb:
+      image: mariadb:latest
+      container_name: esgi-school-mariadb
+      working_dir: /application
+      volumes:
+        - .:/application
+      environment:
+        - MYSQL_ROOT_PASSWORD=root
+        - MYSQL_DATABASE=esgi
+        - MYSQL_USER=esgi
+        - MYSQL_PASSWORD=esgi
+      ports:
+        - "8003:3306"
+
+    webserver:
+      image: nginx:stable
+      container_name: esgi-school-webserver
+      working_dir: /application
+      volumes:
+          - .:/application
+          - ./engine/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      ports:
+       - "8000:80"
+
+    php-fpm:
+      build: engine/php-fpm
+      container_name: esgi-school-php-fpm
+      working_dir: /application
+      volumes:
+        - .:/application
+        - ./engine/php-fpm/php-ini-overrides.ini:/etc/php/7.0/fpm/conf.d/99-overrides.ini
+
+    phpmyadmin:
+      image: phpmyadmin/phpmyadmin
+      links:
+        - mariadb:db
+      ports:
+        - 8004:80
+      environment:
+        MYSQL_USERNAME: root
+        MYSQL_ROOT_PASSWORD: root
