Update nginx conf
Signed-off-by: François MATHIEU <francois.mathieu@livexp.fr>

--- a/Docker-compose/Reverse-Proxy/engine/conf/00-default.conf
+++ b/Docker-compose/Reverse-Proxy/engine/conf/00-default.conf
@@ -1,9 +1,12 @@
+set $proxy_url http://172.22.0.1;
+
 server {
     listen       80;
     server_name  ex1.dev;
 
     location / {
-        proxy_pass http://172.22.0.1:8000;
+        proxy_set_header Host $host;
+        proxy_pass $proxy_url:8000;
     }
 }
 
@@ -12,6 +15,7 @@ server {
     server_name  ex2.dev;
 
     location / {
-        proxy_pass http://172.22.0.1:8001;
+        proxy_set_header Host $host;
+        proxy_pass $proxy_url:8001;
     }
 }
